tests/errors/surf_name_09.ki
# name resolution: bare '=' to an undefined name inside a function
var f = Function():
    counter = counter + 1
discard f()
